--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -82,6 +82,8 @@ body {
 	color: #F0141E;
 }
 
+/* 3 - Section style */
+
 #heroes-all {
 	display: flex;
 	flex-flow: row wrap;
@@ -101,4 +103,74 @@ body {
 
 .heroImg img {
 	width: 100%;
+}
+
+/* 4 - Footer */
+
+/* 5 - Media Queries */
+
+@media screen and (max-width: 1024px) {
+
+/* Section */
+
+	.heroImg {
+		margin: 0.5rem;
+		width: 21%;
+	}
+}
+
+@media screen and (max-width: 800px) {
+
+/* Header */
+
+	.logo {
+		margin: 0.4rem;
+		max-width: 12rem;
+	}
+
+	.title-band {
+		margin: 4rem 0;
+		text-align: center;
+	}
+
+	.title h1 {
+		margin: 0.8rem;
+		padding: 0.4rem 0 0.4rem 5rem;
+		font-size: 1.8rem;
+	}
+
+/* Section */
+
+	.heroImg {
+		margin: 0.5rem;
+		width: 28%;
+	}
+}
+
+@media screen and (max-width: 414px) {
+
+/* Header */
+
+	.logo {
+		margin: 0.2rem;
+		max-width: 10rem;
+	}
+
+	.title-band {
+		margin: 1.4rem 0;
+		text-align: left;
+	}
+
+	.title h1 {
+		margin: 0.5rem 0.5rem;
+    padding: 0.8rem 0 0.8rem 10.4rem;
+    font-size: 1.8rem;
+	}
+
+/* Section */
+
+	.heroImg {
+		margin: 0.5rem;
+		width: 42%;
+	}
 }
