--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -105,9 +105,69 @@ body {
 	width: 100%;
 }
 
-/* 4 - Footer */
+/* 4 - Modal */
 
-/* 5 - Media Queries */
+.my-hero {
+	cursor: pointer;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: 1rem auto;
+    padding: 2rem;
+    width: 70%;
+    height: auto;
+}
+
+.modal h2{
+	text-align: center;
+	margin-top: 2rem;
+	margin-bottom: 5rem;
+	color:#F0141E;
+	font-family: 'Quicksand', sans-serif;
+
+}
+
+.modal img{
+	margin-top:10px;
+}
+
+/* The Close Button */
+.close {
+    width: 4rem;
+	height: 4rem;
+	margin: 0 0 1rem;
+	color: #F0141E;
+    float: right;
+    font-size: 2.8rem;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+} 
+
+/* 5 - Footer */
+
+/* 6 - Media Queries */
 
 @media screen and (max-width: 1024px) {
 
@@ -120,9 +180,7 @@ body {
 }
 
 @media screen and (max-width: 800px) {
-
 /* Header */
-
 	.logo {
 		margin: 0.4rem;
 		max-width: 12rem;
@@ -140,7 +198,6 @@ body {
 	}
 
 /* Section */
-
 	.heroImg {
 		margin: 0.5rem;
 		width: 28%;
@@ -148,9 +205,7 @@ body {
 }
 
 @media screen and (max-width: 414px) {
-
 /* Header */
-
 	.logo {
 		margin: 0.2rem;
 		max-width: 10rem;
@@ -168,7 +223,6 @@ body {
 	}
 
 /* Section */
-
 	.heroImg {
 		margin: 0.5rem;
 		width: 42%;
