create component for modal content and modal styles

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -128,23 +128,44 @@ body {
 /* Modal Content */
 .modal-content {
     background-color: #fefefe;
-    margin: 1rem auto;
+    margin: 10rem auto;
     padding: 2rem;
     width: 70%;
     height: auto;
 }
 
-.modal h2{
+.myhero-info {
+	display: flex;
+  flex-flow: row wrap;
+  place-content: center;
+  place-items: center;
+}
+
+.myhero-img {
+	width: 45%;
+  overflow: hidden;
+  height: 40rem;
+  place-content: center;
+  place-items: center;
+  display: flex;
+  margin: 1.4rem 2rem 1.4rem 0;
+}
+
+.myhero-img img {
+	height: 100%;
+}
+
+.myhero-text {
+	width: 45%;
+}
+
+.myhero-text h2{
 	text-align: center;
 	margin-top: 2rem;
 	margin-bottom: 5rem;
 	color:#F0141E;
 	font-family: 'Quicksand', sans-serif;
 
-}
-
-.modal img{
-	margin-top:10px;
 }
 
 /* The Close Button */
