--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -159,13 +159,17 @@ body {
 	width: 45%;
 }
 
-.myhero-text h2{
+.myhero-text h2 {
 	text-align: center;
 	margin-top: 2rem;
 	margin-bottom: 5rem;
 	color:#F0141E;
 	font-family: 'Quicksand', sans-serif;
+}
 
+.myhero-text p {
+	font-size: 1.6rem;
+	text-align: justify;
 }
 
 /* The Close Button */
